--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.5.0",
         "@testing-library/user-event": "^7.2.1",
+        "immutability-helper": "^3.0.2",
         "prop-types": "^15.7.2",
         "react": "^16.13.1",
+        "react-dnd": "^10.0.2",
+        "react-dnd-html5-backend": "^10.0.2",
         "react-dom": "^16.13.1",
         "react-redux": "^7.2.0",
         "react-router-dom": "^5.1.2",
